name:              yesod-relational-record
version:           0.0.0
synopsis:          relational-record extension for Yesod
homepage:
category:          Web, Yesod
author:            Kazuki Okamoto <kazuki.okamoto@kakkun61.com>
stability:         alpha
cabal-version:     >= 1.10
build-type:        Simple

Flag dev
    Description:   development flag
    Default:       False

library
    hs-source-dirs:     src
    exposed-modules:    Yesod.Relational

    if flag(dev)
        cpp-options:    -DDEVELOPMENT
        ghc-options:    -Wall -fwarn-tabs -O0
    else
        ghc-options:    -Wall -fwarn-tabs -O2

    default-extensions: TemplateHaskell
                      , MultiParamTypeClasses
                      , FlexibleInstances

    build-depends:      base                          >= 4          && < 5
                      , yesod-core                    >= 1.4.17     && < 1.5
                      , mtl
                      , transformers
                      , HDBC
                      , HDBC-session
                      , names-th
                      , persistable-record
                      , persistable-types-HDBC-pg
                      , relational-query
                      , relational-query-HDBC
                      , relational-record
                      , relational-schemas
                      , sql-words
                      , text-postgresql

    default-language:   Haskell2010
